# Computer_Vision

Introduction_to_Computer_Vision/TemplateMatching1D/: CMakeLists.txt  TemplateMatching1D.cpp  TemplateMatching1D_main.cpp  clean.csh  run.csh
Introduction_to_Computer_Vision/TemplateMatching1D/include/: TemplateMatching1D.h
Introduction_to_Computer_Vision/TemplateMatching2D/: CMakeLists.txt  TemplateMatching2D.cpp  TemplateMatching2D_main  TemplateMatching2D_main.cpp  clean.csh  run.csh
Introduction_to_Computer_Vision/TemplateMatching2D/include/: TemplateMatching2D.h
Introduction_to_Computer_Vision/example/Image_Read/: CMakeLists.txt  Image_Read_main.cpp  run.csh
